<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">Search</string>
    <string name="seachHint">Enter Search Term</string>
    <string name="title_activity_image_display">ImageDisplay</string>
    <string name="ivDisplay">ivDisplay</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="saveSettings">save</string>
    <string name="lblSite">Site</string>
    <string name="lblColor">Color</string>
    <string name="color_prompt">Color</string>
    <string name="lblType">Type</string>
    <string name="tvSize">Size</string>

</resources>
